# ml-kernels

./: .gitignore  CMakeLists.ref.txt  CMakeLists.txt  LICENSE  TutorialConfig.h.in  norm.cu  sampling.cu  test.cc  tutorial.cc
MathFunctions/: CMakeLists.txt  MathFunctions.cc  mysqrt.cc
kernels/: CMakeLists.txt  kernels.h  norm.cu  norm.hip  sampling.cu  sampling.hip
src/: CMakeLists.txt
src/python/: CMakeLists.txt  test.py
triton/: flash_attention.py  sampling.py  softmax.py  softmax_2.py  vector_add.py  vector_add2.py  vector_add3.py
